--- a/web/templates/layout/app.html.eex
+++ b/web/templates/layout/app.html.eex
@@ -38,7 +38,7 @@
             <%= rendering_link "Elixir.SrobPhoenix.HomeView.index", handler_view_action(@conn), home_path(@conn, :index), "Inicio"%>
             <%= rendering_link "Elixir.SrobPhoenix.HomeView.nosotros", handler_view_action(@conn), home_path(@conn, :nosotros), "Nosotros"%>
             <%= rendering_link "Elixir.SrobPhoenix.HomeView.directiva", handler_view_action(@conn), home_path(@conn, :directiva), "Directiva"%>
-            <li class="dropdown ">
+            <!--<li class="dropdown ">
               <a href="#" class="dropdown-toggle">
                 Afiliados
               </a>
@@ -53,6 +53,8 @@
                 Contacto
               </a>
             </li>
+           -->
+           <%= rendering_link "Elixir.SrobPhoenix.HomeView.contacto", handler_view_action(@conn), home_path(@conn, :contacto), "Contacto"%>
           </ul>
         </div><!-- /navbar-collapse -->
       </div>
@@ -66,7 +68,7 @@
       <div class="row">
         <div class="col-md-12">
           <p class="copyright-space">
-            SROB &copy; 2016. All Rights Reserved.
+            SROB &copy; 2017. All Rights Reserved.
           </p>
         </div>
       </div><!--/row-->
