--- a/web/templates/home/directiva.html.eex
+++ b/web/templates/home/directiva.html.eex
@@ -1,7 +1,7 @@
 <!--=== Breadcrumbs ===-->
 <div class="breadcrumbs margin-bottom-40">
     <div class="container">
-        <h1 class="pull-left"></i>Directiva</h1>
+        <h1 class="pull-left">Directiva</h1>
     </div>
 </div><!--/breadcrumbs-->
 <!--=== End Breadcrumbs ===-->
