--- a/web/templates/home/nosotros.html.eex
+++ b/web/templates/home/nosotros.html.eex
@@ -1,7 +1,7 @@
 <!--=== Breadcrumbs ===-->
 <div class="breadcrumbs margin-bottom-40">
   <div class="container">
-    <h1 class="pull-left"></i>Nosotros</h1>
+    <h1 class="pull-left">Nosotros</h1>
   </div>
 </div><!--/breadcrumbs-->
 <!--=== End Breadcrumbs ===-->
@@ -11,7 +11,7 @@
     <div class="col-xs-offset-1 col-xs-10 col-sm-offset-2 col-sm-8 reg-page">
       <div>
         <div class="service">
-          <i class="icon-group service-icon"></i>
+          <i class="fa fa-users service-icon"></i>
           <div class="desc">
             <h4>¿Quienes Somos?</h4>
             <p>
@@ -22,7 +22,7 @@
       </div>
       <div>
         <div class="service">
-          <i class="icon-road service-icon"></i>
+          <i class="fa fa-road service-icon"></i>
           <div class="desc">
             <h4>¿Que es ASME?</h4>
             <p>
@@ -33,7 +33,7 @@
       </div>
       <div>
         <div class="service">
-          <i class="icon-road service-icon"></i>
+          <i class="fa fa-road service-icon"></i>
           <div class="desc">
             <h4>Nuestra Misión</h4>
             <p>
@@ -44,7 +44,7 @@
       </div>
       <div>
         <div class="service">
-          <i class="icon-eye-open service-icon"></i>
+          <i class="fa fa-eye service-icon"></i>
           <div class="desc">
             <h4>Nuestra Visión</h4>
             <p>
@@ -55,7 +55,7 @@
       </div>
       <div>
         <div class="service">
-          <i class="icon-compass service-icon"></i>
+          <i class="fa fa-compass service-icon"></i>
           <div class="desc">
             <h4>Nuestros Valores</h4>
             <ul>
