--- a/web/templates/auth/login.html.eex
+++ b/web/templates/auth/login.html.eex
@@ -11,7 +11,6 @@
   <link rel="stylesheet" href="<%= static_path(@conn, "/css/app.css") %>">
   <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
   <link rel="shortcut icon" href="<%= static_path(@conn, "/favicon.ico") %>">
-  <link rel="stylesheet" href="<%= static_path(@conn, "/css/blocks.css") %>">
   <link rel="stylesheet" href="<%= static_path(@conn, "/css/login.css") %>">
   <!-- CSS Page Style -->
 </head>
@@ -27,29 +26,34 @@
 				</ul>
 				<p>No tienes una cuenta? <a class="color-green" href="#">Regístrate</a></p>
 			</div>
-
-			<div class="input-group margin-bottom-20">
-				<span class="input-group-addon"><i class="fa fa-envelope"></i></span>
-				<input type="text" class="form-control" placeholder="Email">
-			</div>
-			<div class="input-group margin-bottom-20">
-				<span class="input-group-addon"><i class="fa fa-lock"></i></span>
-				<input type="text" class="form-control" placeholder="Password">
-			</div>
-			<hr>
-
-			<div class="checkbox">
-				<label>
-					<input type="checkbox">
-					<p>Always stay signed in</p>
-				</label>
-			</div>
-
-			<div class="row">
-				<div class="col-md-10 col-md-offset-1">
-					<button type="submit" class="btn-u btn-block">Log In</button>
-				</div>
-			</div>
+      <%= if get_flash(@conn, :info) do %>
+      <div class="alert alert-info alert-dismissible" role="alert">
+        <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+        <%= get_flash(@conn, :info) %>
+      </div>
+      <% end %>
+      <%= if get_flash(@conn, :danger) do %>
+      <div class="alert alert-danger alert-dismissible" role="alert">
+        <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+        <%= get_flash(@conn, :danger) %>
+      </div>
+      <% end %>
+      <%= form_for @changeset, auth_path(@conn, :callback, "login"), fn f -> %>
+        <div class="input-group margin-bottom-20 <%= error_tag(f, :email) |> error? %>">
+          <span class="input-group-addon"><i class="fa fa-envelope"></i></span>
+          <%= email_input f, :email, class: "form-control", placeholder: "Email" %>
+        </div>
+        <div class="input-group margin-bottom-20 <%= error_tag(f, :password) |> error? %>">
+  				<span class="input-group-addon"><i class="fa fa-lock"></i></span>
+          <%= password_input f, :password, class: "form-control", placeholder: "Password" %>
+  			</div>
+        <hr>
+  			<div class="row">
+  				<div class="col-md-10 col-md-offset-1">
+            <%= submit "Log In", class: "btn-u btn-block" %>
+  				</div>
+  			</div>
+      <% end %>
 		</div>
 		<!--End Reg Block-->
 	</div><!--/container-->
